<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/TextView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="" />

    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            <ImageView
                android:id="@+id/ui_image_placeholder2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:contentDescription="placeholder"
                android:src="@drawable/ic_no_picture" />
        </TableRow>
        
        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/ui_date_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_span="3" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            <ImageView
                android:id="@+id/ui_image_placeholder2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:contentDescription="placeholder"
                android:src="@drawable/ic_no_picture" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <ImageView
                android:id="@+id/ui_image_fadjr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dip"
                android:contentDescription="fadjr prayer"
                android:src="@drawable/ic_fadjr" />

            <TextView
                android:id="@+id/ui_text_fadjr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ui_txt_fadjr"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/ui_value_fadjr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/xxx"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <ImageView
                android:id="@+id/ui_image_shuruk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:contentDescription="shuruk prayer"
                android:src="@drawable/ic_shuruk" />

            <TextView
                android:id="@+id/ui_text_shuruk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ui_txt_shuruk"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/ui_value_shuruk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/xxx"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <ImageView
                android:id="@+id/ui_image_zuhr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:contentDescription="zuhr prayer"
                android:src="@drawable/ic_zuhr" />

            <TextView
                android:id="@+id/ui_text_zuhr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ui_txt_zuhr"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/ui_value_zuhr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/xxx"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow62"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

                        <ImageView
                android:id="@+id/ui_image_assr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:contentDescription="assr prayer"
                android:src="@drawable/ic_assr" />

            <TextView
                android:id="@+id/ui_text_assr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ui_txt_assr"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            
            <TextView
                android:id="@+id/ui_value_assr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/xxx"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </TableRow>
        
        <TableRow
            android:id="@+id/tableRow7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <ImageView
                android:id="@+id/ui_image_ghurub"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:contentDescription="sunset"
                android:src="@drawable/ic_ghurub" />
            <TextView
                android:id="@+id/ui_text_ghurub"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ui_txt_ghurub"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            <TextView
                android:id="@+id/ui_value_ghurub"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/xxx"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/ui_image_maghrib"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:contentDescription="maghrib prayer"
                android:src="@drawable/ic_maghrib" />
            <TextView
                android:id="@+id/ui_text_maghrib"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ui_txt_maghrib"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            <TextView
                android:id="@+id/ui_value_maghrib"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/xxx"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            <ImageView
                android:id="@+id/ui_image_ishaa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:contentDescription="ishaa prayer"
                android:src="@drawable/ic_ishaa" />
            <TextView
                android:id="@+id/ui_text_ishaa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ui_txt_ishaa"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            <TextView
                android:id="@+id/ui_value_ishaa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/xxx"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </TableRow>
    </TableLayout>
</LinearLayout>
